feat: add endpoint changelog
